--- a/grant/Pegex-YAML.pod
+++ b/grant/Pegex-YAML.pod
@@ -49,7 +49,7 @@ Perl has four major YAML implementations:
 
 They all have major incompatabilities. In the past year the #yaml channel on
 irc.perl.org has gotten all the right people together to resolve this. A great
-first step would be to make the two pure Perl implementations L<YAML> and
+next step would be to make the two pure Perl implementations L<YAML> and
 L<YAML::Tiny> be grammar driven.
 
 L<Pegex> is a Perl 6 Rules inspired framework that greatly lowers the barriers
@@ -147,6 +147,6 @@ David Oswald has been a Perl user for over a decade, is an author of several
 CPAN modules, and maintainer of more. David also runs Salt Lake Perl Mongers.
 
 Ingy and David work well together and have decided to collaborate on a number
-of big projects that benefit Perl and Software Development.
+of projects that will benefit Perl and Software Development.
 
 =cut
